--- a/site/guide/attestation/submit-attestations.qmd
+++ b/site/guide/attestation/submit-attestations.qmd
@@ -24,36 +24,30 @@ As a submitter, this process is part of the audit trail for your model's informa
 
 ## Steps
 
-1. In the left sidebar, click **{{< fa inbox >}} My Inbox**.
+1. Access your attestation task using one of these methods:
 
-2. Under **Tasks**, locate the attestation with a **Not Started** status.
+   - In the left sidebar, click **{{< fa clipboard-check >}} Attestations**, then click on your submission in the **Not Started** column.
+   - In the left sidebar, click **{{< fa inbox >}} My Inbox**, then under Tasks, locate the attestation with a **Not Started** status.
 
-3. Click **Start attestation**.
+2. Click **Start Attestation**.
 
-4. Document the status change to [**{{< fa clipboard-check >}} In Progress**]{.bubble} in the [**notes**]{.small-caps} field and click **Confirm**.
+   After you start the attestation, the questionnaire fields are available to complete.
 
-   After you confirm the status change to [**{{< fa clipboard-check >}} In Progress**]{.bubble}, the attestation questionnaire is ready to be completed.
+3. Review the model context using the tabs on the left side of the screen:
 
-5. Complete the attestation questionnaire, including:
+   - **Inventory** — Shows the models included in your attestation with snapshot details.
+   - **Validation Issues** — Shows open validation issues for your models at the time of the snapshot.
+   - **Artifacts** — Shows model artifacts captured in the snapshot.
 
-   - Checking all applicable boxes
-   - Answering each question 
-   - Adding relevant comments
+4. Complete the attestation questionnaire by filling in each field. Required fields are marked with an asterisk (*).
 
    ::: {.callout}
-   Refer to the filtered views to ensure the attestation questionnaire is accurate:
-
-   - **{{< fa cubes >}} Inventory** — Shows model information and recent activity such as comments, status changes, updates and test results.
-   - **{{< fa border-all >}} Artifacts** — Shows model artifacts with details like title, severity, status, and due date.
+   Click on any model in the Inventory tab to view its snapshot details. Use the **View Live Data** link to navigate to the current model record if you need additional context.
    :::
 
-6. Verify that your answers are complete and click **Submit for Review**.
+5. Verify that your answers are complete and click **Submit for Review**.
 
-7. Document the status change in the [**notes**]{.small-caps} field for your reviewer and click **Confirm**.
-
-After you confirm the status change, the attestation questionnaire is sent to your reviewer.
-
-If your reviewer rejects your attestation questionnaire, you will need to revise your responses and resubmit for review. The platform maintains a history of all status changes and notes.
+After you submit, the attestation is sent to your reviewer. The platform maintains a history of all status changes and notes. If your reviewer rejects your attestation questionnaire, you will need to revise your responses and resubmit for review.
 
 <!-- FOOTNOTES -->
 
