Updated example as per Rod's suggestion

--- a/site/guide/workflows/workflow-configuration-examples.qmd
+++ b/site/guide/workflows/workflow-configuration-examples.qmd
@@ -103,24 +103,34 @@ In this example, the workflow transitions into a state[^13] called [Model In Dev
 
 #### {{< fa arrow-pointer >}} User Action v2
 
-In this example, the user is presented with an action button labelled **{{< fa arrow-right >}} Submit Documentation For Review** that requires them to include a model export in a [model export]{.smallcaps} attachment type field.[^14]
+In this example, the user is presented with an action button labelled **{{< fa arrow-right >}} Submit Documentation For Review** that requires them to include a model export in a [model export]{.smallcaps} attachment type field, then input the date the model was **Submitted for Initial Validation On**.[^14]
 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-60-ns}
-
-![Example {{< fa arrow-pointer >}} User Action v2 configuration modal](configure_user-action.png){fig-alt="A screenshot showing an example User Action v2 configuration modal" .screenshot group="user-action"}
+![Example {{< fa arrow-pointer >}} User Action v2 configuration modal](configure_user-action.png){width="90%" fig-alt="A screenshot showing an example User Action v2 configuration modal" .screenshot group="user-action"}
 :::
 
 ::: {.w-40-ns}
-
 ![Example {{< fa arrow-pointer >}} User Action v2 step](example_user-action.png){fig-alt="A screenshot showing an example User Action v2 step" .screenshot group="user-action"}
 
 :::
 
 ::::
 
-![Example {{< fa arrow-pointer >}} User Action v2 submission panel](example_user-action-submit.png){fig-alt="A screenshot showing an example User Action v2 submission panel" width=90% .screenshot group="user-action"}
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns .pr3}
+![Example {{< fa arrow-pointer >}} User Action v2 submission panel requesting  upload of a model export](example_user-action-submit1.png){fig-alt="A screenshot showing an example User Action v2 submission panel requesting  upload of a model export" .screenshot group="user-action"}
+:::
+
+::: {.w-50-ns}
+![Example {{< fa arrow-pointer >}} User Action v2 submission panel requesting input of initial submission date](example_user-action-submit2.png){fig-alt="A screenshot showing an example User Action v2 submission panel requesting input of initial submission date" .screenshot group="user-action"}
+
+:::
+
+::::
+
 
 #### {{< fa users >}} Approval
 
