--- a/site/guide/integrations/configure-connections.qmd
+++ b/site/guide/integrations/configure-connections.qmd
@@ -122,6 +122,24 @@ Required configuration details:
 **[personal access token]{.smallcaps}**
 : A PAT secret that includes the `api` or `read_api` scope.
 
+### Custom Integration
+
+A user-defined connection to third-party systems that implement the {{< var vm.product >}} reference API.[^4] Use custom integrations to connect internal model registries, proprietary platforms, or any service that exposes model or artifact data through a compatible API.
+
+Required configuration details:
+
+**[integration name]{.smallcaps}**
+: A display name that identifies this connection in the UI.
+
+**[url]{.smallcaps}**
+: The base URL of your integration service endpoint.
+
+**[api key]{.smallcaps}**
+: The secret that authenticates requests to your integration service.
+
+**[type]{.smallcaps}**
+: The resource type this integration provides — select `Model` or `Artifact`.
+
 ::::
 
 ## Add connections
@@ -206,4 +224,6 @@ If the test is successful, the message **{{< fa check-circle >}} Connection succ
 [^2]: [Manage secrets](manage-secrets.qmd)
 
 [^3]: [Supported connections](#supported-connections)
+
+[^4]: [Custom integrations](custom-integrations.qmd)
 
