--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -14,6 +14,7 @@ listing:
     contents:
       - manage-secrets.qmd 
       - configure-connections.qmd
+      - custom-integrations.qmd
       - linking-external-models.qmd
       - integrations-examples.qmd
 ---
@@ -74,20 +75,24 @@ Link to models in external registries and development platforms and keep invento
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-25-ns}
+::: {.w-20-ns}
 - AWS SageMaker
 :::
 
-::: {.w-25-ns}
+::: {.w-20-ns}
 - AWS Bedrock
 :::
 
-::: {.w-25-ns}
+::: {.w-20-ns}
 - MLflow
 :::
 
-::: {.w-25-ns}
+::: {.w-20-ns}
 - GitLab
+:::
+
+::: {.w-20-ns}
+- Custom integrations
 :::
 
 ::::
