--- a/site/guide/model-documentation/view-documentation-guidelines.qmd
+++ b/site/guide/model-documentation/view-documentation-guidelines.qmd
@@ -10,6 +10,7 @@ aliases:
 
 View the guidelines for model documentation associated with a template to ensure that you are compliant with documentation requirements.
 
+::: {.callout title="PDF uploads are currently considered static documents."}
 ::: {.attn}
 
 ## Prerequisites
