--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -33,7 +33,7 @@ These stock documents cannot be deleted, only edited.
 
 4. Click **{{< fa plus >}} Create Document**.
 
-5. Enter in the document details: 
+5. Enter in the document details:
 
     - **[document title]{.smallcaps}** — Title of your document.[^7]
     - **[document type]{.smallcaps}**[^8] — The type of your document.
@@ -107,7 +107,10 @@ Learn more about how to work with the default document types within the {{< var 
 
 [^8]: [Manage document types](manage-document-types.qmd)
 
-[^9]: [Customize document templates](customize-document-templates.qmd)
+[^9]:
+
+    - **Please note that PDF uploads are currently considered static documents that cannot be edited or replaced once uploaded.**
+    - [Customize document templates](customize-document-templates.qmd)
 
 [^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
