--- a/site/guide/integrations/configure-connections.qmd
+++ b/site/guide/integrations/configure-connections.qmd
@@ -122,9 +122,11 @@ Required configuration details:
 **[personal access token]{.smallcaps}**
 : A PAT secret that includes the `api` or `read_api` scope.
 
-### Custom Integration
+### Custom
 
-A user-defined connection to third-party systems that implement the {{< var vm.product >}} reference API.[^4] Use custom integrations to connect internal model registries, proprietary platforms, or any service that exposes model or artifact data through a compatible API.
+A user-defined connection to a third-party system that implements the {{< var vm.product >}} reference API.[^4] 
+
+Use custom integrations to connect internal model registries, proprietary platforms, or any service that exposes model or artifact data through a compatible API.
 
 Required configuration details:
 
@@ -138,7 +140,7 @@ Required configuration details:
 : The secret that authenticates requests to your integration service.
 
 **[type]{.smallcaps}**
-: The resource type this integration provides — select `Model` or `Artifact`.
+: The resource type this integration provides, such as `Model` or `Artifact`.
 
 ::::
 
