--- a/site/guide/integrations/custom-integrations.qmd
+++ b/site/guide/integrations/custom-integrations.qmd
@@ -15,8 +15,9 @@ Custom integrations let you link models or artifacts from internal registries, p
 A custom integration acts as a bridge between {{< var vm.product >}} and your external system:
 
 1. You deploy a service that implements the {{< var vm.product >}} reference API endpoints.
-2. You configure a custom integration in {{< var vm.product >}} that points to your service.
-3. Users can then link models or artifacts from your service to records in the model inventory.
+2. Your service connects to your external system and translates its data into the reference API format.
+3. You configure a custom integration in {{< var vm.product >}} that points to your service.
+4. Users can then link models or artifacts from your external system to records in the model inventory.
 
 ```{mermaid}
 flowchart LR
