--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -92,7 +92,7 @@ Link to models in external registries and development platforms and keep invento
 :::
 
 ::: {.w-20-ns}
-- Custom integrations
+- Custom
 :::
 
 ::::
