Add onboarding page image

--- a/site/guide/access/sign-up-via-aws-marketplace.qmd
+++ b/site/guide/access/sign-up-via-aws-marketplace.qmd
@@ -61,7 +61,9 @@ When you subscribe to {{< var vm.product >}} via AWS Marketplace, your usage is 
 
    AWS sends a secure request to {{< var vm.product >}} confirming your purchase.
 
-4. You are redirected to the {{< var vm.product >}} onboarding page with a one-time identifier that validates your Marketplace purchase.
+4. You are redirected to the {{< var vm.product >}} onboarding page with a one-time identifier that validates your Marketplace purchase:
+
+![{{< var vm.product >}} onboarding page](validmind-onboarding-page.png){width=80% fig-alt="Screenshot of the ValidMind signup welcome screen where you onboard with your one-time identifier." .screenshot} 
 
 5. Enter your details and complete registration.
 
