More complete custom integrations content

--- a/site/guide/integrations/configure-connections.qmd
+++ b/site/guide/integrations/configure-connections.qmd
@@ -126,21 +126,18 @@ Required configuration details:
 
 A user-defined connection to a third-party system that implements the {{< var vm.product >}} reference API.[^4] 
 
-Use custom integrations to connect internal model registries, proprietary platforms, or any service that exposes model or artifact data through a compatible API.
+Use custom integrations to connect internal model registries, proprietary platforms, or any service that exposes data through a compatible API.
 
 Required configuration details:
 
-**[integration name]{.smallcaps}**
-: A display name that identifies this connection in the UI.
-
-**[url]{.smallcaps}**
-: The base URL of your integration service endpoint.
+**[endpoint url]{.smallcaps}**
+: The base URL of your deployed integration that implements the reference API.
 
 **[api key]{.smallcaps}**
-: The secret that authenticates requests to your integration service.
+: A secret containing the API key for authenticating with your integration.
 
-**[type]{.smallcaps}**
-: The resource type this integration provides, such as `Model` or `Artifact`.
+**[integration types]{.smallcaps}**
+: Select which types of objects this integration provides — Model Registry and/or Artifact / Ticket Source.
 
 ::::
 
@@ -227,5 +224,5 @@ If the test is successful, the message **{{< fa check-circle >}} Connection succ
 
 [^3]: [Supported connections](#supported-connections)
 
-[^4]: [Custom integrations](custom-integrations.qmd)
+[^4]: [Implement custom integrations](implement-custom-integrations.qmd)
 
