--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -14,8 +14,8 @@ listing:
     contents:
       - manage-secrets.qmd 
       - configure-connections.qmd
-      - custom-integrations.qmd
-      - linking-external-models.qmd
+      - implement-custom-integrations.qmd
+      - link-external-models.qmd
       - integrations-examples.qmd
 ---
 
@@ -92,7 +92,7 @@ Link to models in external registries and development platforms and keep invento
 :::
 
 ::: {.w-20-ns}
-- Custom
+- Custom integrations
 :::
 
 ::::
