--- a/site/guide/integrations/link-external-models.qmd
+++ b/site/guide/integrations/link-external-models.qmd
@@ -2,8 +2,10 @@
 # Copyright © 2023-2026 ValidMind Inc. All rights reserved.
 # Refer to the LICENSE file in the root of this repository for details.
 # SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial
-title: "Linking external models"
+title: "Link external models"
 date: last-modified
+aliases:
+  - /guide/integrations/linking-external-models.html
 ---
 
 Link models in the {{< var vm.product >}} model inventory to external systems to keep model information synchronized. 
@@ -112,4 +114,3 @@ The model is unlinked from the external system.
 [^6]: [Configure connections](configure-connections.qmd)
 
 [^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
-
