--- a/site/guide/integrations/implement-custom-integrations.qmd
+++ b/site/guide/integrations/implement-custom-integrations.qmd
@@ -56,7 +56,7 @@ A reference implementation with sample code is available. Contact your ValidMind
 Your service must expose these endpoints at the `/api/v1` base path:
 
 **List models**
-: `GET /models` — Returns all models from your system. Supports optional filtering by resource type.
+: `GET /models` — Returns all models from your system. Supports optional `?resource_type=` filter.
 
 **Get model**
 : `GET /models/{id}` — Returns a specific model by its unique identifier.
@@ -102,6 +102,53 @@ Your models endpoint should return objects with these fields:
 ### Bidirectional sync
 
 When linking resources, {{< var vm.product >}} can write metadata back to your system via `PUT` requests. This bidirectional sync enables you to store the {{< var vm.product >}} model identifier (`vm_cuid`) alongside your external records, creating a two-way link between systems.
+
+::: {.callout collapse="true" title="Code examples"}
+
+**GET /models response**
+
+```json
+[
+  {
+    "id": "model-001",
+    "name": "fraud-detection-xgboost",
+    "status": "active",
+    "resource_type": "ml_model",
+    "metadata": {
+      "framework": "xgboost",
+      "version": "2.1.3"
+    },
+    "created_at": "2024-01-15T10:30:00Z",
+    "updated_at": "2024-01-22T14:20:00Z"
+  }
+]
+```
+
+**PUT /models/{id} request body** (what {{< var vm.product >}} sends)
+
+```json
+{
+  "vm_cuid": "mdl_abc123xyz"
+}
+```
+
+**Health check response**
+
+```json
+{
+  "status": "healthy"
+}
+```
+
+**Error response format**
+
+```json
+{
+  "detail": "Model not found"
+}
+```
+
+:::
 
 ## Set up custom integrations
 
