Add custom integrations documentation (#1154)
* Initial draft

* Save point

* More complete custom integrations content

* Add better example info

--- a/site/guide/integrations/configure-connections.qmd
+++ b/site/guide/integrations/configure-connections.qmd
@@ -122,6 +122,23 @@ Required configuration details:
 **[personal access token]{.smallcaps}**
 : A PAT secret that includes the `api` or `read_api` scope.
 
+### Custom
+
+A user-defined connection to a third-party system that implements the {{< var vm.product >}} reference API.[^4] 
+
+Use custom integrations to connect internal model registries, proprietary platforms, or any service that exposes data through a compatible API.
+
+Required configuration details:
+
+**[endpoint url]{.smallcaps}**
+: The base URL of your deployed integration that implements the reference API.
+
+**[api key]{.smallcaps}**
+: A secret containing the API key for authenticating with your integration.
+
+**[integration types]{.smallcaps}**
+: Select which types of objects this integration provides — Model Registry and/or Artifact / Ticket Source.
+
 ::::
 
 ## Add connections
@@ -206,4 +223,6 @@ If the test is successful, the message **{{< fa check-circle >}} Connection succ
 [^2]: [Manage secrets](manage-secrets.qmd)
 
 [^3]: [Supported connections](#supported-connections)
+
+[^4]: [Implement custom integrations](implement-custom-integrations.qmd)
 
