Add GitLab example, edits

--- a/site/guide/integrations/configure-connections.qmd
+++ b/site/guide/integrations/configure-connections.qmd
@@ -108,19 +108,18 @@ Required configuration details:
 
 ### GitLab
 
-
-A DevOps platform that hosts code, runs pipelines, and manages team collaboration.
+Synchronize GitLab model registry with ValidMind model inventory for comprehensive model tracking.
 
 Required configuration details:
 
 **[project id]{.smallcaps}**
-: The GitLab project or group path that contains the ML repository to sync.
+: The GitLab project ID or path containing ML models (required).
 
 **[gitlab instance url]{.smallcaps}** (optional)
-: Blank for gitlab.com or the self-hosted URL.
+: Leave empty to use GitLab.com, or enter your self-hosted GitLab URL.
 
 **[personal access token]{.smallcaps}**
-: A PAT secret that includes the `api` or `read_api` scope.
+: Select a secret containing your GitLab Personal Access Token with `api` or `read_api` scope.
 
 ### Custom
 
