--- a/site/guide/integrations/integrations-examples.qmd
+++ b/site/guide/integrations/integrations-examples.qmd
@@ -14,6 +14,7 @@ Adapt these usage examples for your own workflows or connections to interact wit
 - [Add webhook step triggers](#add-webhook-step-triggers)
 - [Synchronize models with AWS SageMaker](#synchronize-models-with-aws-sagemaker)
 - [Synchronize models with AWS Bedrock](#synchronize-models-with-aws-bedrock)
+- [Synchronize models with GitLab](#synchronize-models-with-gitlab)
 
 ::: {.attn}
 
@@ -357,6 +358,62 @@ This builds a complete dependency graph showing how your AI applications relate 
 
 9. Click **Link Model**.
 
+### Synchronize models with GitLab
+
+Synchronize GitLab model registry with ValidMind model inventory for comprehensive model tracking.
+
+#### Configure the connection
+
+::: {.column-margin}
+![Configure GitLab connection](integrations-examples-gitlab.png){width=80% fig-alt="Screenshot of the Configure GitLab dialog showing fields for integration name, description, project ID, GitLab instance URL, personal access token, and initial status." .screenshot}
+:::
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Integrations, select **Connections**.
+
+3. Click **{{< fa plus >}} Add Connection**.
+
+4. In the modal that opens, select **GitLab**.
+
+5. Complete:
+
+   - **[integration name]{.smallcaps}** — How other admins can identify the connection.
+   - **[description]{.smallcaps}** (optional) — The intended usage or additional details.
+   - **[project id]{.smallcaps}** — The GitLab project ID or path containing ML models (required).
+   - **[gitlab instance url]{.smallcaps}** (optional) — Leave empty to use GitLab.com, or enter your self-hosted GitLab URL.
+   - **[personal access token]{.smallcaps}** — Select a secret containing your GitLab Personal Access Token with `api` or `read_api` scope.
+   - **[initial status]{.smallcaps}** — Set to `Operational` to enable immediately or `Disabled` if you plan to finish setup later.
+
+6. Click **Save Integration**.
+
+7. Test the connection:
+
+   a. Hover over the GitLab connection you just created.
+   b. When the **{{< fa ellipsis-vertical >}}** menu appears, click on it and select **{{< fa circle-check >}} Test Connection**.
+
+   If the test is successful, the message **{{< fa check-circle >}} Connection successful** displays.
+
+#### Link the models
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^15]
+
+3. Scroll down until you locate the **GitLab** connection box in the right sidebar.
+
+4. Hover over the GitLab box.
+
+5. When the **{{< fa ellipsis-vertical >}}** menu appears, click on it and select **{{< fa link >}} Link Model**.
+
+6. In the modal that opens, click the [select model]{.smallcaps} dropdown to pick the GitLab model to link.
+
+7. Optional: Click **Test Connection** to ensure the connection is working as expected.
+
+   If the test is successful, the message **{{< fa check-circle >}} Connection Test Successful** displays.
+
+8. Click **Link Model**.
+
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
@@ -386,3 +443,5 @@ This builds a complete dependency graph showing how your AI applications relate 
 [^13]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
 [^14]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^15]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
