Initial draft changes

--- a/site/training/ai-governance/compliance-and-oversight.qmd
+++ b/site/training/ai-governance/compliance-and-oversight.qmd
@@ -82,6 +82,7 @@ Each regulation maps to platform capabilities:
 
 {{< var vm.product >}} provides implementation guides for:
 
+- [AI governance](/about/use-cases/ai-governance.qmd){target="_blank"}
 - [EU AI Act](/about/use-cases/eu-ai-act.qmd){target="_blank"}
 - [SR 11-7](/about/use-cases/sr-11-7.qmd){target="_blank"}
 - [SS1/23](/about/use-cases/ss1-23.qmd){target="_blank"}
@@ -91,21 +92,31 @@ Each regulation maps to platform capabilities:
 
 ## Governance dashboards {.center}
 
+:::: {.columns}
+
+::: {.column width="50%" .pr3}
 Dashboards provide visibility into:
 
 - AI system portfolio overview
 - Risk distribution across tiers
 - Workflow status and bottlenecks
 - Compliance metrics
+:::
+
+::: {.column width="50%" .pl3}
+![Analytics dashboard](analytics-dashboard.png){fig-alt="A screenshot showing the ValidMind Analytics view with portfolio overview and compliance metrics" .screenshot}
+:::
+
+::::
 
 ## Configuring dashboards {.center}
 
-In {{< var vm.product >}}:
+The **{{< fa chart-line >}} Analytics** section provides:
 
-1. Navigate to **Analytics**
-2. Select or create dashboard views
-3. Configure widgets for key metrics
-4. Set up automatic refresh and sharing
+- Pre-built dashboards for governance oversight
+- Customizable widgets for key metrics
+- Filters by risk tier, status, and ownership
+- Export options for board reporting
 
 ## Reporting {.center}
 
@@ -120,6 +131,9 @@ Generate reports for:
 
 ## Types of audit evidence {.center}
 
+:::: {.columns}
+
+::: {.column width="50%" .pr3}
 {{< var vm.product >}} automatically captures:
 
 | Evidence type | Description |
@@ -128,6 +142,13 @@ Generate reports for:
 | Approval history | Who approved what, when |
 | Documentation | Technical and governance documentation |
 | Change history | All modifications with timestamps |
+:::
+
+::: {.column width="50%" .pl3}
+![Activity log](activity-log.png){fig-alt="A screenshot showing the activity log with change history and audit trail in ValidMind" .screenshot}
+:::
+
+::::
 
 ## Generating evidence {.center}
 
