--- a/site/training/ai-governance/configuring-ai-workflows.qmd
+++ b/site/training/ai-governance/configuring-ai-workflows.qmd
@@ -78,11 +78,19 @@ In {{< var vm.product >}}:
 3. Configure automatic notifications
 4. Route new registrations for review
 
-## Hands-on: Review workflow configuration {.center}
+## Example: Risk classification workflow {.center}
 
-1. Navigate to **Settings > Workflows**
-2. Explore the available workflow templates
-3. Identify which workflows would support intake for AI systems
+![Risk Classification Workflow](risk-classification-workflow.png){fig-alt="A screenshot showing a Risk Classification Workflow with model stage changes, user actions, approvals, and condition branches for different risk levels" .screenshot}
+
+## Risk classification workflow steps {.center}
+
+This intake workflow demonstrates key AI governance patterns:
+
+- **Model Stage Change** — Sets model stage to [In Risk Classification]{.bubble}
+- **User Action v2** — Collects risk classification materials with deadline
+- **Broadcast** — Notifies stakeholders of pending risk rating
+- **Approval** — Routes to Model Validation Governance for review
+- **Condition Branch** — Different paths for High Risk, Medium Risk, or Default
 
 # Approval workflows {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
@@ -109,12 +117,22 @@ Consider these design principles:
 
 ## Configuring approvals {.center}
 
+:::: {.columns}
+
+::: {.column width="50%" .pr3}
 {{< var vm.product >}} supports:
 
 - Workflow states and transitions
 - Role-based approval authorities
 - Sequential and parallel approvals
 - Approval deadline tracking
+:::
+
+::: {.column width="50%" .pl3}
+![Approval step configuration](approval-config.png){fig-alt="A screenshot showing approval step configuration with role selection in the workflow builder" .screenshot}
+:::
+
+::::
 
 # Human oversight controls {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
