--- a/site/training/ai-governance/managing-ai-use-cases.qmd
+++ b/site/training/ai-governance/managing-ai-use-cases.qmd
@@ -71,6 +71,9 @@ Use case inventories help you:
 
 ## Inventory fields {.center}
 
+:::: {.columns}
+
+::: {.column width="50%" .pr3}
 Configure custom inventory fields for AI governance:
 
 | Field type | Examples |
@@ -79,13 +82,31 @@ Configure custom inventory fields for AI governance:
 | Ownership | Use case owner, business sponsor |
 | Purpose | Intended use, use boundaries |
 | Status | Lifecycle stage, approval status |
+:::
 
-## Hands-on: Explore the inventory {.center}
+::: {.column width="50%" .pl3}
+![Custom fields configuration](custom-fields.png){fig-alt="A screenshot showing custom field configuration in ValidMind settings" .screenshot}
+:::
 
-1. Log in to {{< var vm.product >}}
-2. Navigate to **Model Inventory**
-3. Review the columns and filters available
-4. Consider which fields would support your governance needs
+::::
+
+## The inventory in action {.center}
+
+:::: {.columns}
+
+::: {.column width="40%" .pr3}
+The **{{< fa cubes >}} Inventory** displays AI use cases with:
+
+- **Tier** — Risk classification level
+- **Model owner** — Accountability assignment
+- **Model stage** — Current lifecycle stage
+:::
+
+::: {.column width="60%" .pl3}
+![Model inventory overview](inventory-overview.png){fig-alt="A screenshot showing the ValidMind inventory with AI use cases displaying tier, model owner, and model stage fields" .screenshot}
+:::
+
+::::
 
 # Risk classification {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
@@ -112,12 +133,22 @@ Align your classification to relevant regulations:
 
 ## Configuring risk tiers {.center}
 
+:::: {.columns}
+
+::: {.column width="50%" .pr3}
 In {{< var vm.product >}}, you can:
 
 1. Add custom fields for risk classification
 2. Configure different workflows per tier
 3. Apply documentation templates by tier
 4. Generate reports filtered by risk level
+:::
+
+::: {.column width="50%" .pl3}
+![Risk tier configuration](risk-tiers.png){fig-alt="A screenshot showing risk tier field configuration in ValidMind" .screenshot}
+:::
+
+::::
 
 # Impact assessments {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
