--- a/site/training/ai-governance/understanding-ai-governance.qmd
+++ b/site/training/ai-governance/understanding-ai-governance.qmd
@@ -55,28 +55,7 @@ This first module is part of a four-part series:
 
 :::
 
-First, let's make sure you can log in to {{< var vm.product >}}.
-
 {{< include /training/assets/_revealjs-navigation.qmd >}}
-
-## Before you begin {.center}
-
-::: {.panel-tabset}
-
-### Registration
-
-To continue, you need to have been [onboarded](ai-governance-register.qmd#register){target="_blank"} onto {{< var validmind.training >}}.
-
-<br>
-
-:::: {.tc .mt5 .f2 .embed}
-Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() to continue.
-
-:::
-
-{{< include /training/common-slides/_log-in.qmd >}}
-
-:::
 
 # What is AI governance? {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
@@ -196,6 +175,9 @@ Organizations may coordinate these use cases or manage them separately.
 
 ## {{< var vm.product >}} for AI governance {.center}
 
+:::: {.columns}
+
+::: {.column width="50%" .pr3}
 {{< var vm.product >}} supports AI governance through:
 
 - **Inventory** — Track AI systems and use cases
@@ -203,6 +185,13 @@ Organizations may coordinate these use cases or manage them separately.
 - **Workflows** — Intake, approval, and deployment processes
 - **Documentation** — Generate governance documentation
 - **Dashboards** — Monitor compliance across your portfolio
+:::
+
+::: {.column width="50%" .pl3}
+![The ValidMind Platform](platform-orientation.png){fig-alt="A screenshot of the ValidMind Platform showing the main interface" .screenshot}
+:::
+
+::::
 
 ## Next steps {.center}
 
