Rename and restructure Supported Models page
- Rename supported-models.qmd to supported-model-frameworks.qmd
- Add alias for old URL to preserve links
- Restructure content into clearer sections:
  - Framework support with wrapper classes and install commands
  - Test input requirements (predict vs predict_proba)
  - Custom model wrappers (FunctionModel, PipelineModel)
  - GenAI and LLM support
  - RAG evaluation with RAGAS
  - Python and dependency compatibility
- Add Mermaid diagrams for class hierarchy and test input flow
- Update references in faq-integrations.qmd and overview-model-documentation.qmd

--- a/site/about/overview-model-documentation.qmd
+++ b/site/about/overview-model-documentation.qmd
@@ -146,7 +146,7 @@ How the {{< var validmind.developer >}} works:
 
 [^1]: [Model risk management](overview-model-risk-management.qmd)
 
-[^2]: [Supported models](/developer/supported-models.qmd)
+[^2]: [Supported model frameworks](/developer/supported-model-frameworks.qmd)
 
 [^3]: [Customize document templates](/guide/templates/customize-document-templates.qmd)
 
