--- a/site/faq/faq-integrations.qmd
+++ b/site/faq/faq-integrations.qmd
@@ -14,7 +14,7 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-    - ../developer/supported-models.qmd
+    - ../developer/supported-model-frameworks.qmd
     - ../about/overview-llm-features.qmd
     - ../about/deployment/deployment-options.qmd
 categories: ["supported libraries", "supported languages", "integrations", "images", "large language models", "explainability", "deployment options", "validmind library"]
@@ -82,7 +82,7 @@ We will be implementing connector interfaces allowing extraction of relationship
 
 [^1]: [{{< var validmind.developer >}}](/developer/validmind-library.qmd)
 
-[^2]: [Supported modeling libraries and other tools](/developer/supported-models.qmd#supported-modeling-libraries-and-other-tools)
+[^2]: [Supported model frameworks](/developer/supported-model-frameworks.qmd)
 
 [^3]: [Matplotlib](https://matplotlib.org/)
 
